Update to file structure
I had to change the links to the correct file structure.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <table cellspacing="20px">
             <tr>
                 <td>
-                    <img src="/home/darryl/Desktop/Web developement/HTML-Personal Site/images/profile pic.jpeg" alt="Darryl's Profile picture">
+                    <img src="images/profile pic.jpeg" alt="Darryl's Profile picture">
                 </td>
                 <td>
                     <h1>Darryl Sanders</h1>
@@ -24,8 +24,8 @@
        
         
         <hr>
-        <a href="/home/darryl/Desktop/Web developement/HTML-Personal Site/hobbies.html">Hobbies</a>
-        <a href="/home/darryl/Desktop/Web developement/HTML-Personal Site/contact-me.html">Contact Me</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="contact-me.html">Contact Me</a>
         <h3>Work experience</h3>
         <table>
             <thead>
