--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             
            
         </ul>
-        <a href="/home/darryl/Desktop/Web developement/HTML-Personal Site/list of classes taken.html">Learn More.....</a>
+        <a href="list of classes taken.html">Learn More.....</a>
         <h3>Certifications Earned</h3>
             <ul>
                 <li><a href="">CompTIA - A+</a></li>
